# finder-hunter-Api

./: README.md  main.py  pyproject.toml
Class/: classe.py
finder/: Class.py  DropboxRelatorio.csv  Export.py  SendEmail.py
